# glance-anki

./: Cargo.toml  README.md  flake.nix
nix/: dev-shell.nix  module.nix  package.nix
src/: anki.rs  api.rs  color.rs  config.rs  lib.rs  main.rs  templates.rs
src/anki/: db.rs  mod.rs  scheduling.rs  stats.rs  types.rs
templates/: graph.html  stats.html
