[package]
name = "glance-anki"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
askama = "0.15.4"
chrono = "0.4"
url = "2.5.4"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.39", features = ["bundled"] }

[profile.release]
strip = true
lto = true

[[bin]]
name = "glance-anki"
path = "src/main.rs"
